--- a/JS_10/index.html
+++ b/JS_10/index.html
@@ -29,11 +29,11 @@
 			class='invisible' id='ageLabel'>Вік має бути в межах від 0 до
 			100</label><br> <label>Місце проживання</label><br> <input
 			type="text" id="getAddress"><br> <br> <input
-			type="button" value="Send by Get" onclick="sendDataByGetMethod()">
-		<input type="button" value="Send by Post"
-			onclick="sendDataByPostMethod()">
+			type="button" value="Send by Get" id="ajaxGet"> <input
+			type="button" value="Send by Post" id="ajaxPost">
 
 	</form>
+
 
 	<script src='jquery.js'></script>
 
